pyinterp/pyinterp/pyinterp/tests/must_pass/builtins/list/errors/index_not_in_list2.py
lst = [1, "foo", False]

print(lst.index(1, 2))